google maps API

--- a/websites/firstWebsite/style.css
+++ b/websites/firstWebsite/style.css
@@ -12,3 +12,11 @@ main{
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.377);
 }
+/* Set the size of the div element that contains the map */
+#map {
+    height: 400px;
+    /* The height is 400 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
+
+  }
